# live-ocr-translator

./: .gitignore  Cargo.toml  Dockerfile  Error.md  PROGRESS.md  README.md  build.sh  copy.sh  cross_compile.sh  test.sh
.github/workflows/: cross_compile.yml  unit_testing.yml
libs/lib_gui/: Cargo.toml
libs/lib_gui/src/: lib.rs  window.rs
libs/lib_ocr/: Cargo.toml
libs/lib_ocr/src/: errors.rs  image.rs  lib.rs  text.rs
libs/lib_ocr/src/win_sc/: devices.rs  error.rs  mod.rs  monitor.rs  window.rs
libs/lib_translator/: Cargo.toml
libs/lib_translator/src/: errors.rs  lib.rs
src/: main.rs
tesseract-ocr/: lstmeval.1.html  lstmtraining.1.html  merge_unicharsets.1.html  mftraining.1.html  set_unicharset_properties.1.html  shapeclustering.1.html  tesseract.1.html  text2image.1.html  unicharambigs.5.html  unicharset.5.html  unicharset_extractor.1.html  wordlist2dawg.1.html
