[workspace]
members = ["libs/*"]

[package]
name = "live-ocr-translator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
lib_gui = { path = "./libs/lib_gui" }
lib_ocr = { path = "./libs/lib_ocr" }
lib_translator = { path = "./libs/lib_translator" }
glib = "0.18.1"
image = "0.24.6"
futures = "0.3" 
tokio = { version = "1.12.0", features = ["full"] } 