[package]
name = "lib_gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
lib_ocr = { path = "../lib_ocr" }
lib_translator = { path = "../lib_translator" }
gtk = "0.17.1"
glib = "0.18.1"
tokio = { version = "1.32.0", features = ["full"] } 

