[package]
name = "lib_gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
lib_ocr = { path = "../lib_ocr" }
lib_translator = { path = "../lib_translator" }
gtk = "0.18.1"
glib = "0.18.1"
gdk = "0.18.0"
tokio = { version = "1.32.0", features = ["full"] } 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.24.6"
