[package]
name = "lib_ocr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rusty-tesseract = "1.1.7"
image = "0.24.6"
winapi = "0.3.9"
backtrace = "0.3"
thiserror = "1.0"
anyhow = "1.0"

[dependencies.windows]
version = "0.48.0"
features = [
    "Foundation",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Console",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_System_WinRT",
    "Win32_System_WinRT_Direct3D11",
    "Win32_System_WinRT_Graphics_Capture",
    "UI",
    "Storage",
    "Storage_Streams",
    "Graphics",
    "Graphics_Capture",
    "Graphics_DirectX",
    "Graphics_DirectX_Direct3D11",
    "Graphics_Imaging",
    "Graphics_DirectX_Direct3D11"
]

[dependencies.windows-sys]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_System_Performance",
    "Win32_Graphics_Gdi",
    "Win32_System_SystemServices",
    "Win32_System_DataExchange",
    "Win32_Storage_Xps",
    "Win32_System_Ole",
    "Win32_Graphics_Dwm"
]